src/objects/NA_Other_Existing_Loans__c.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Institution__c</fullName>
        <label>Financial  Institution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chevron Federal Credit Union</fullName>
                </value>
                <value>
                    <fullName>Spectrum Credit Union</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Chase Bank</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Capital One</fullName>
                </value>
                <value>
                    <fullName>Ally</fullName>
                </value>
                <value>
                    <fullName>USAA</fullName>
                </value>
                <value>
                    <fullName>Other Credit Union</fullName>
                </value>
                <value>
                    <fullName>Other Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Spectrum Federal Credit Union</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Assessment__c</fullName>
        <label>Needs Assessment</label>
        <referenceTo>Needs_Assesment__c</referenceTo>
        <relationshipLabel>NA_Other_Existing_Loans</relationshipLabel>
        <relationshipName>NA_Other_Existing_Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type_of_Loan__c</fullName>
        <label>Type of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home Equity</fullName>
                </value>
                <value>
                    <fullName>Personal Line of Credit</fullName>
                </value>
                <value>
                    <fullName>RV/Boat</fullName>
                </value>
                <value>
                    <fullName>Student/College</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NA_Other_Existing_Loan</label>
    <nameField>
        <label>Other Loans</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NA_Other_Existing_Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>